[package]
name = "req_java"
version = "0.11.0"
edition = "2021"
authors = ["Smilex <msmliexx1@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.119"
reqwest = { version = "0.11", features = ["cookies", "json", "rustls", "rustls-native-certs", "blocking"] }
jni = "0.19.0"
bytes = "1.1.0"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
debug = false
opt-level = 3
strip = true
panic = 'abort'